Working gallery and work view with new file layout.

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Lucidity</title>
+  <title>Gods of India</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="gallery.css">
 </head>
 
 <body>
+  <div id='dialog-overlay' style='display:none'></div>
   <div id='dialog' style='display:none'>
     <div class='title' id='dialog-title'>Save Scene</div>
     <div class='wrap'>
@@ -21,8 +23,9 @@
       </div>
     </div>
   </div>
-  <script src='load.js'></script>
+  <script src='gallery.js'></script>
 </body>
 
 </html>
+
 
